@@ -400,6 +400,27 @@ $fatpacked{"App/RedisTop/Component/Save.pm"} = <<'APP_REDISTOP_COMPONENT_SAVE';
   1;
 APP_REDISTOP_COMPONENT_SAVE
 
+$fatpacked{"App/RedisTop/Component/Slowlog.pm"} = <<'APP_REDISTOP_COMPONENT_SLOWLOG';
+  package App::RedisTop::Component::Slowlog;
+  use base 'App::RedisTop::Component';
+  sub new {
+      my $class = shift;
+  
+      my $self = bless {
+          group => 'slowlog',
+          items => [
+              { name => 'slowlog', stat_key => 'slowlog_len', },
+          ],
+          width => 9,
+          unit  => 1,
+          total => 1,
+          @_,
+      }, $class;
+  }
+  
+  1;
+APP_REDISTOP_COMPONENT_SLOWLOG
+
 $fatpacked{"App/RedisTop/Perform.pm"} = <<'APP_REDISTOP_PERFORM';
   package App::RedisTop::Perform;
   use Term::ANSIColor qw/colored/;
@@ -527,9 +548,13 @@ $fatpacked{"App/RedisTop/Perform.pm"} = <<'APP_REDISTOP_PERFORM';
       foreach my $instance (@{$self->{instances}}) {
           my ($host, $port) = split(/:/, $instance);
   
-          my $redis  = App::RedisTop::Redis->new(host => $host, port => $port);
-          my $config = $redis->config();
-          my $stats  = $redis->info();
+          my $redis   = App::RedisTop::Redis->new(host => $host, port => $port);
+          my $config  = $redis->config();
+          my $stats   = $redis->info();
+          my $slowlog = $redis->slowlog();
+          # add slowlog len into stats
+          $stats->{slowlog_len} = $slowlog;
+  
           push @lines, $self->build_body(
               $instance,
               $stats,
@@ -603,10 +628,13 @@ $fatpacked{"App/RedisTop/Redis.pm"} = <<'APP_REDISTOP_REDIS';
   
   sub config {
       my ($self) = @_;
-  
       return $self->command("CONFIG", "GET", "*");
   }
   
+  sub slowlog {
+      my ($self) = @_;
+      return $self->command("SLOWLOG", "LEN");
+  }
   
   sub command {
       my ($self, @command) = @_;
@@ -620,6 +648,7 @@ $fatpacked{"App/RedisTop/Redis.pm"} = <<'APP_REDISTOP_REDIS';
       my @lines = split(/\r\n/, $buffer);
       my $header = $self->row_parser($lines[0]);
       return $buffer if $header->{type} eq 'itemlen';
+      return $header->{value} if $header->{type} eq 'number';
   
       my %stats = ();
       my $key;
@@ -642,7 +671,7 @@ $fatpacked{"App/RedisTop/Redis.pm"} = <<'APP_REDISTOP_REDIS';
   sub row_parser {
       my ($self, $row) = @_;
   
-      if($row =~ /^(\*|\$)+(\w+)/) {
+      if($row =~ /^(\*|\$|\:)+(\w+)/) {
           if($1 eq '*') { # header
               return {
                   type  => 'rowlen',
@@ -651,6 +680,11 @@ $fatpacked{"App/RedisTop/Redis.pm"} = <<'APP_REDISTOP_REDIS';
           } elsif($1 eq '$') { # next length
               return {
                   type  => 'itemlen',
+                  value => $2,
+              };
+          } elsif($1 eq ':') { # number
+              return {
+                  type  => 'number',
                   value => $2,
               };
           }
@@ -712,6 +746,7 @@ use App::RedisTop::Component::Connection;
 use App::RedisTop::Component::ConnectionPer;
 use App::RedisTop::Component::Save;
 use App::RedisTop::Component::Command;
+use App::RedisTop::Component::Slowlog;
 use App::RedisTop::Component::DB;
 
 #################################
@@ -727,7 +762,8 @@ my %groups = (
     connper   => { class => App::RedisTop::Component::ConnectionPer->new(), sort => 5, },
     save      => { class => App::RedisTop::Component::Save->new(),          sort => 6, },
     command   => { class => App::RedisTop::Component::Command->new(),       sort => 7, },
-    db        => { class => App::RedisTop::Component::DB->new(dbid => 0),   sort => 8, },
+    slowlog   => { class => App::RedisTop::Component::Slowlog->new(),       sort => 8, },
+    db        => { class => App::RedisTop::Component::DB->new(dbid => 0),   sort => 9, },
 );
 
 sub main {
@@ -741,6 +777,7 @@ sub main {
         'o|connper'     => \$opt->{connper},
         's|save'        => \$opt->{save},
         'C|command'     => \$opt->{command},
+        'l|slowlog'     => \$opt->{slowlog},
         'd|db'          => \$opt->{db},
         'i|instances=s' => \$opt->{instances},
         'sleep=i'       => \$opt->{sleep},
@@ -799,7 +836,7 @@ redis-top [options]
 
 =item redis-top --sleep 1 --nocolor --cpu --memory --db
 
-=item redis-top -cMnsCdmo  # full
+=item redis-top -cMnsCdmol  # full
 
 =back
 
@@ -836,6 +873,10 @@ enable save stats
 =item -C,--command
 
 enable command stats
+
+=item -l,--slowlog
+
+enable slowlog stats
 
 =item -d,--db
 
