@@ -1,6 +1,7 @@
 Revision history for Perl extension App::RedisTop.
 
 0.03  2013/07/17
+  - Add Slowlog group
   - Add UsedMemory / MaxMemory
   - Add Connection / MaxClient
 
